--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,11 +17,11 @@
   },
   "[md]": {
     "editor.tabSize": 4,
-    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   },
   "[markdown]": {
     "editor.tabSize": 4,
-    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   },
   "[json]": {
     "editor.tabSize": 2,
@@ -45,8 +45,17 @@
   "vscode-yaml-sort.quotingType": "\"",
   "evenBetterToml.formatter.reorderKeys": true,
   "evenBetterToml.formatter.reorderArrays": true,
-  "flake8.args": [
-    "--ignore=E203,E704,W503",
-    "--max-line-length=88",
-  ],
+  "flake8.args": ["--ignore=E203,E704,W503", "--max-line-length=88"],
+  "yaml.schemas": {
+    "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
+  },
+  "yaml.customTags": [
+    "!ENV scalar",
+    "!ENV sequence",
+    "!relative scalar",
+    "tag:yaml.org,2002:python/name:material.extensions.emoji.to_svg",
+    "tag:yaml.org,2002:python/name:material.extensions.emoji.twemoji",
+    "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format",
+    "tag:yaml.org,2002:python/object/apply:pymdownx.slugs.slugify mapping"
+  ]
 }
