--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [tool.poetry]
 authors = ["allen2c <f1470891079@gmail.com>"]
 description = "Deploy simple vector similarity search service by DuckDB."
+homepage = "https://github.com/allen2c/dvs"
 license = "MIT"
 name = "dvs-py"
 packages = [{ include = "dvs" }]
 readme = "README.md"
-version = "0.4.0"
+repository = "https://github.com/allen2c/dvs"
+version = "1.0.0"
 
 [tool.poetry.dependencies]
 diskcache = "*"
-duckdb = ">=0.10.2"
-fastapi = { version = "^0", extras = ["standard"] }
+duckdb = "^1"
 numpy = "^2"
-openai = "^1"
 pydantic = "^2"
 pydantic-settings = "*"
-python = "^3.12"
+python = ">=3.11,<4"
 uuid-utils = "*"
 
 [tool.poetry.extras]
@@ -37,12 +37,15 @@ black = { extras = ["jupyter"], version = "*" }
 faker = "*"
 isort = "*"
 matplotlib = "*"
+openai = "^1"
 pandas = "*"
-poetry-plugin-export = "^1.6.0"
+poetry-plugin-export = "*"
 pytest = "^8"
 pytest-asyncio = "*"
-pytest-cov = "^4"
-pytest-xdist = "^3"
+pytest-cov = "*"
+pytest-env = "*"
+pytest-xdist = "*"
+rich = "*"
 scipy = "*"
 setuptools = ">=69"
 
