--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ diskcache = "*"
 duckdb = "^1"
 numpy = "^2"
 openai = "^1"
+openai-embeddings-model = "*"
 pydantic = "^2"
 pydantic-settings = "*"
 python = ">=3.11,<4"
