--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -14,7 +14,7 @@ cleo==2.1.0 ; python_version >= "3.11" and python_version < "4"
 click==8.2.1 ; python_version >= "3.11" and python_version < "4"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4"
 contourpy==1.3.2 ; python_version >= "3.11" and python_version < "4"
-coverage==7.9.1 ; python_version >= "3.11" and python_version < "4"
+coverage==7.9.2 ; python_version >= "3.11" and python_version < "4"
 crashtest==0.4.1 ; python_version >= "3.11" and python_version < "4"
 cryptography==45.0.5 ; python_version >= "3.11" and python_version < "4" and sys_platform == "linux"
 csscompressor==0.9.5 ; python_version >= "3.11" and python_version < "4"
@@ -33,7 +33,7 @@ faker==37.4.0 ; python_version >= "3.11" and python_version < "4"
 fastjsonschema==2.21.1 ; python_version >= "3.11" and python_version < "4"
 filelock==3.18.0 ; python_version >= "3.11" and python_version < "4"
 findpython==0.6.3 ; python_version >= "3.11" and python_version < "4"
-fonttools==4.58.4 ; python_version >= "3.11" and python_version < "4"
+fonttools==4.58.5 ; python_version >= "3.11" and python_version < "4"
 ghp-import==2.1.0 ; python_version >= "3.11" and python_version < "4"
 gitdb==4.0.12 ; python_version >= "3.11" and python_version < "4"
 gitpython==3.1.44 ; python_version >= "3.11" and python_version < "4"
@@ -81,6 +81,7 @@ msgpack==1.1.1 ; python_version >= "3.11" and python_version < "4"
 mypy-extensions==1.1.0 ; python_version >= "3.11" and python_version < "4"
 neoteroi-mkdocs==1.1.2 ; python_version >= "3.11" and python_version < "4"
 numpy==2.3.1 ; python_version >= "3.11" and python_version < "4"
+openai-embeddings-model==0.2.0 ; python_version >= "3.11" and python_version < "4"
 openai==1.93.0 ; python_version >= "3.11" and python_version < "4"
 packaging==25.0 ; python_version >= "3.11" and python_version < "4"
 paginate==0.5.7 ; python_version >= "3.11" and python_version < "4"
